--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5%;
+}
+
+h1,h2,h3,h4,h5,h6{
+    color:var(--heading-color);
+    font-family:sans-series;
+    font-weight : 900;
+}
+
+
+h1{
+  font-size: 3.2rem;
+}
+p, li,a , label {
+  font-size: 1.8rem;
+  letter-spacing: 0.1rem;
+  color: var(--para-color);
+  line-height: 1.5;
+  font-weight: 400;
+}
+
+li {
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+}
+
+/* theme */
+
+:root {
+  --main-color:#0062ff;
+  --supporting-color:#ebf3fe;
+  --font-color:#fff;
+  --heading-color: #000a19;
+  --h-color: #fff;
+  --test:#070101;
+  --para-color:#504e4d;
+  --btn-hover-bg-color:#003b99;
+  --btn-box-shadow:box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.container {
+  max-width: 142rem;
+  margin: 0 auto;
+  padding: 9.6rem 2.4rem;
+}
+
+.grid{
+  display: grid;
+  gap: 9.6rem;
+}
+
+.grid-two-cols {
+  grid-template-columns: repeat(2,1fr);
+}
+
+
+.grid-three-cols {
+  grid-template-columns: repeat(3,1fr);
 }
